# Pinocchio-ROS2

./: CMakeLists.txt  package.xml
include/ros2_pinocchio_demo/: pinocchio_node.hpp
src/: pinocchio_node.cpp
